tests/files/lexer_tests/should_fail/016.cmdr
// Illegal character in string (ascii 16)
var = '';